# pyproject.toml
[build-system]
requires = ["setuptools", "wheel"]

[project]
name = "tst-pipeline"
version = "0.1.0"
description = "Tail Suspension Test (TST) immobility pipeline"
requires-python = ">=3.9"
dependencies = [
    "numpy",
    "pandas",
    "scikit-learn",
    "typer",
    "rich",
    "matplotlib",
    "openpyxl",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"
